# ctfd-dl

./: README.md  pyproject.toml  pyrightconfig.json
ctfd_dl/: auth.py  challenges.py  core.py  html.py  main.py  models.py  requests.py  resources.py
ctfd_dl/api/v1/: users.py
ctfd_dl/http/: exchanges.py
ctfd_dl/http/headers/: httpx.py
ctfd_dl/http/response/: base.py
ctfd_dl/plugins/challenges/: core.py
ctfd_dl/tools/: models.py
src/ctfd_dl/: app.py  client.py  core.py  namespaces.py  pages.py  type_adapters.py  views.py
src/ctfd_dl/api/: core.py
src/ctfd_dl/api/v1/: challenges.py  hints.py  scoreboard.py  teams.py
src/ctfd_dl/api/v1/schemas/: core.py
src/ctfd_dl/http/: requests.py
src/ctfd_dl/http/client/: base.py  httpx.py
src/ctfd_dl/http/headers/: base.py
src/ctfd_dl/http/response/: httpx.py
